aks_deployment/oh-team5-java.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: oh-team5-java
  name: oh-team5-java
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oh-team5-java
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: oh-team5-java
    spec:
      containers:
      - image: registryrbq9427.azurecr.io/tripinsights/user-java:1.0
        name: user-java
        resources: {}
status: {}
