aks_deployment/oh-team5-poi.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: oh-team5-poi
  name: oh-team5-poi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oh-team5-poi
  strategy: {}
  template:
    metadata:
      labels:
        app: oh-team5-trips
    spec:
      containers:
      - image: registryrbq9427.azurecr.io/tripinsights/poi:1.0
        name: poi
        resources: {}
status: {}
