aks_deployment/userprofile.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: userprofile
  name: userprofile
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userprofile
  strategy: {}
  template:
    metadata:
      labels:
        app: userprofile
    spec:
      containers:
      - image: registryrbq9427.azurecr.io/tripinsights/userprofile:1.0
        name: userprofile
        resources: {}
status: {}
