aks_deployment/trips.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: api
  labels:
    app: oh-team5-trips
  name: oh-team5-trips
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oh-team5-trips
  strategy: {}
  template:
    metadata:
      labels:
        app: oh-team5-trips
    spec:
      volumes:
      - name: secrets-store-inline
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: "ot5keyvault"
      containers:
      - image: registryrbq9427.azurecr.io/tripinsights/trips:1.0
        name: trips
        volumeMounts:
          - name: secrets-store-inline
            mountPath: "/secrets"
            readOnly: true

---
apiVersion: v1
kind: Service
metadata:
  namespace: api
  labels:
    app: oh-team5-trips
  name: trips-svc
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 80
  selector:
    app: oh-team5-trips
  type: NodePort
status:
  loadBalancer: {}
