aks_deployment/ingressroute.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tripviewer-ingress
  namespace: web
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tripview-service
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: api
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: /api/poi
        pathType: Prefix
        backend:
          service:
            name: poi-svc
            port:
              number: 8000
      - path: /api/trips
        pathType: Prefix
        backend:
          service:
            name: trips-svc
            port:
              number: 8000
      - path: /api/user-java
        pathType: Prefix
        backend:
          service:
            name: user-java-svc
            port:
              number: 8000
      - path: /api/user
        pathType: Prefix
        backend:
          service:
            name: userprofile-svc
            port:
              number: 8000
